[package]
name = "responses-proxy"
version = "0.2.0"
edition = "2024"
description = "OpenAI Responses API proxy over any Chat Completions provider. Supports HTTP SSE and WebSocket streaming, reasoning/thinking content, tool calling, and can serve as a drop-in Codex CLI backend via DeepSeek or other Chat API-compatible models."
license = "Apache-2.0"
repository = "https://github.com/CallOrRet/responses-proxy"
homepage = "https://github.com/CallOrRet/responses-proxy"
documentation = "https://docs.rs/responses-proxy"
readme = "README.md"
keywords = ["openai", "responses-api", "proxy", "deepseek", "websocket"]
categories = ["api-bindings", "web-programming::http-server"]
authors = ["CallOrRet <CallOrRet@icloud.com>"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
hex = "0.4"
rand = "0.10"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde_yaml = "0.9"
futures = "0.3"
bytes = "1"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rustc-hash = "2"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
